12.28/ts.md
# 1.TypeScript简介

简介:
TypeScript是微软开发的一个开源的编程语言，通过在JavaScript的基础上添加静态类型定义构建而成。TypeScript通过TypeScript编译器或Babel转详为JavaScript代码，可运行在任何浏览器，任何操作系统。(eg不会有兼容性)·它是JavaScr必t 的一个超集，TypeScript 在 JavaScript 的基础上添加了可选的静态类型和基于类的面向对象编程。
产生的背景:
js语言是一种动态型语言(变量类型是动态的，也就是在is中定义的变量 let a中的a可以存放任何类型的值，若是使用一个空符串去运算,eg 字符串1和数字1相加...) 且在编写代码的过程当中编译器并不会报错,这导致后期维护十分困难，微软在is的基础上进行扩展形成了TypeScript。
官网: https://www.tslang.cn/

# 2.TypeScript的发展优缺点

优点：

1. TypeScript 增加了代码的可读性和可维护性
   1、类型系统实际上是最好的文档，大部分的函鼓看看类型的定义就知道如何使用了。
    2、可以在编译阶段就发现大部分的错误。这总比在运行时出错好。
    3、增强了编译器和IDE的功能，包括代码补全，接口提示，跳转到定义，重构等。
2. TypeScript 非常包容
   1、Typescript是javascript的超集，.js文件可以直接重命名为,ts即可。
    2、即使不显示的定义类型，也能够自动做出类型推导。
    3、可以定义从简单到复杂的几乎一切类型。
    4、兼容第三方库，即使第三方库不是用 TypeScript 写的，也可以编写单独的类型文件供 TypeScript 读取。
3. TypeScript 拥有活跃的社区
   1、大部分第三方库都有提供给Typescript的类型定义文件
    2、大型开源编程软件,和多方人员合作
4. TypeScript 兼容性很强
   1、TypeScript会在编译时期去掉数据类型和特有语法，生成纯粹的 Javacript 代码。由于最终在浏览器上运行的是 JavaScript语言，所以 TypeScript 并不依赖于浏览器的支持，也并不会带来兼容问题，然后运行在测览器、Node.js 等任何能运行JavaScript 的环境中。
    2、TypeScript扩展了JavaScript的酒法，所以任何现有的JavaScript程序可以运行在TypeScript环境中,因此我们可以在 ts 中继续写 js 的代码而不会报错,这意昧着 JavaScript 项目能够渐进式的迁移到 TypeScript
5. TypeScript 拥抱最新的 ECMAScript 标准,与时俱进
   1、TypeScript 与标准同步发展，符合最新的 ECMAScript 标准(stage 3)

缺点：
有一定的学习成本，需要理解接口，泛型，类，枚举类型等前端工程师可能不是很熟悉的概念
短期内会增加开发成本，毕竟要多写一些类型的定义，不过对于一个需要长期维护的项目，Typescript能够减少其维护成本。
集成到构建流程需要的一些工作量。
可能和一些库结合的不是很完美。

# 3.类型系统的介绍

1. 静态语言和动态语言
   类型系统按照类型检查的时机来分类，可以分为动态类型和静态类型
   动态类型是指在运行时才会进行类型检查，这种语言的类型错误往往会导致运行时错误。JavaScript 是一门解释型语言，没有编译阶段，所以它是动态类型;以下这段代码在运行时才会报错:

let foo = 1;
foo.split("");
// Uncaught TypeError: foo.split is not a function
// 运行时会报错 (foo.split 不是一个函数) ，造成线上 bug

静态类型是指编译阶段就能确定每个变量的类型，这种语言的类型错误往往会导致语法错误。TypeScript 在运行前需要先编译为JavaScript，而在编译阶段就会进行类型检查，所以 ypeScript 是静态类型;这段 TypeScript 代码在编译阶段就会报错了:

let foo = 1
foo.split("")
// Property 'split' does not exist on type 'number!
// 编译时会报错 (数字没有 split 方法) ，无法通过编译

2. 如何理解强类型和弱类型的语言
   类型系统按照下是否允许隐式类型转换，来分类，可以分为强类型和弱类型
   以下这段代码不管是在 JavaScript 中还是在 TypeScript 中都是可以正常运行的，运行时数字 1 会被隐式类型转换为字符串"1"，加号 + 被识别为字符串拼接，所以打印出结果是字符串 "11"!
console.log(1 +'1');// 打印出字符串11'
TypeScript 是完全兼容 JavaScript 的，它不会修改 JavaScript 运行时的特性，所以它们都是弱类型

# 4、enum 枚举

定义：一组角色，每一个角色用一个数字表示
好处：方便以后项目的维护减少魔法数字
特点：1、常用来封装code等固定一下比较
      2、如果一开始没有设置状态码，成递增形式增加
      3、只能是数字的状态码进行递增，其他形式均报错

# 5、void
void表示没有任何类型适用于函数定义(函数没有返回值)
void类型的变量只能赋值为undefined，其他类型不能赋值给void类型的变量

# 6、扩展阅读
   1、交叉类型：符号&，用&链接多个类型，交叉使用
   （交叉类型就是取多个类型的并集，使用 & 符号定义，被&符链接的多个类型构成一个交叉类型，表示这个类型同时具备这几个连接起来的类型的特）

   2、联合类型：符号|，要求符合其中的任何一个即可
   3、类型断言：符号<>、as，属性的类型太多了，自己定义属性类型

# 7、interface
interface：类似于对象：{} 代码块
接口的高阶用法