12.30/ts.md
# 1.TypeScript简介

简介:
TypeScript是微软开发的一个开源的编程语言，通过在JavaScript的基础上添加静态类型定义构建而成。TypeScript通过TypeScript编译器或Babel转详为JavaScript代码，可运行在任何浏览器，任何操作系统。(eg不会有兼容性)·它是JavaScr必t 的一个超集，TypeScript 在 JavaScript 的基础上添加了可选的静态类型和基于类的面向对象编程。
产生的背景:
js语言是一种动态型语言(变量类型是动态的，也就是在is中定义的变量 let a中的a可以存放任何类型的值，若是使用一个空符串去运算,eg 字符串1和数字1相加...) 且在编写代码的过程当中编译器并不会报错,这导致后期维护十分困难，微软在is的基础上进行扩展形成了TypeScript。
官网: https://www.tslang.cn/

# 2.TypeScript的发展优缺点

优点：

1. TypeScript 增加了代码的可读性和可维护性
   1、类型系统实际上是最好的文档，大部分的函鼓看看类型的定义就知道如何使用了。
    2、可以在编译阶段就发现大部分的错误。这总比在运行时出错好。
    3、增强了编译器和IDE的功能，包括代码补全，接口提示，跳转到定义，重构等。
2. TypeScript 非常包容
   1、Typescript是javascript的超集，.js文件可以直接重命名为,ts即可。
    2、即使不显示的定义类型，也能够自动做出类型推导。
    3、可以定义从简单到复杂的几乎一切类型。
    4、兼容第三方库，即使第三方库不是用 TypeScript 写的，也可以编写单独的类型文件供 TypeScript 读取。
3. TypeScript 拥有活跃的社区
   1、大部分第三方库都有提供给Typescript的类型定义文件
    2、大型开源编程软件,和多方人员合作
4. TypeScript 兼容性很强
   1、TypeScript会在编译时期去掉数据类型和特有语法，生成纯粹的 Javacript 代码。由于最终在浏览器上运行的是 JavaScript语言，所以 TypeScript 并不依赖于浏览器的支持，也并不会带来兼容问题，然后运行在测览器、Node.js 等任何能运行JavaScript 的环境中。
    2、TypeScript扩展了JavaScript的酒法，所以任何现有的JavaScript程序可以运行在TypeScript环境中,因此我们可以在 ts 中继续写 js 的代码而不会报错,这意昧着 JavaScript 项目能够渐进式的迁移到 TypeScript
5. TypeScript 拥抱最新的 ECMAScript 标准,与时俱进
   1、TypeScript 与标准同步发展，符合最新的 ECMAScript 标准(stage 3)

缺点：
有一定的学习成本，需要理解接口，泛型，类，枚举类型等前端工程师可能不是很熟悉的概念
短期内会增加开发成本，毕竟要多写一些类型的定义，不过对于一个需要长期维护的项目，Typescript能够减少其维护成本。
集成到构建流程需要的一些工作量。
可能和一些库结合的不是很完美。

# 3.类型系统的介绍

1. 静态语言和动态语言
   类型系统按照类型检查的时机来分类，可以分为动态类型和静态类型
   动态类型是指在运行时才会进行类型检查，这种语言的类型错误往往会导致运行时错误。JavaScript 是一门解释型语言，没有编译阶段，所以它是动态类型;以下这段代码在运行时才会报错:

let foo = 1;
foo.split("");
// Uncaught TypeError: foo.split is not a function
// 运行时会报错 (foo.split 不是一个函数) ，造成线上 bug

静态类型是指编译阶段就能确定每个变量的类型，这种语言的类型错误往往会导致语法错误。TypeScript 在运行前需要先编译为JavaScript，而在编译阶段就会进行类型检查，所以 ypeScript 是静态类型;这段 TypeScript 代码在编译阶段就会报错了:

let foo = 1
foo.split("")
// Property 'split' does not exist on type 'number!
// 编译时会报错 (数字没有 split 方法) ，无法通过编译

2. 如何理解强类型和弱类型的语言
   类型系统按照下是否允许隐式类型转换，来分类，可以分为强类型和弱类型
   以下这段代码不管是在 JavaScript 中还是在 TypeScript 中都是可以正常运行的，运行时数字 1 会被隐式类型转换为字符串"1"，加号 + 被识别为字符串拼接，所以打印出结果是字符串 "11"!
console.log(1 +'1');// 打印出字符串11'
TypeScript 是完全兼容 JavaScript 的，它不会修改 JavaScript 运行时的特性，所以它们都是弱类型

# 4、enum 枚举

定义：一组角色，每一个角色用一个数字表示
好处：方便以后项目的维护减少魔法数字
特点：1、常用来封装code等固定一下比较
      2、如果一开始没有设置状态码，成递增形式增加
      3、只能是数字的状态码进行递增，其他形式均报错

# 5、void
void表示没有任何类型适用于函数定义(函数没有返回值)
void类型的变量只能赋值为undefined，其他类型不能赋值给void类型的变量

# 6、扩展阅读
   1、交叉类型：符号&，用&链接多个类型，交叉使用
   （交叉类型就是取多个类型的并集，使用 & 符号定义，被&符链接的多个类型构成一个交叉类型，表示这个类型同时具备这几个连接起来的类型的特）

   2、联合类型：符号|，要求符合其中的任何一个即可
   3、类型断言：符号<>、as，属性的类型太多了，自己定义属性类型

# 7、interface
interface：类似于对象：{} 代码块
接口的高阶用法

# 8.js原型和原型继承

1.原型
(1).产生的背景:
JS的作者 Brendan Eich 在设计这门编程语言时，只是为了让这门语言作为浏览器与网页互动的工具。他觉得这门语言只需要能完成些简单操作就够了，比如判断用户是否填写了表单。
基于简易语言的设计初衷，作者觉得 JS 不需要类似 java 等面向对象语言所拥有的“继承"机制。但是考虑到 JS 中一切皆对象(所有的数据类型都可以用对象来表示) 必须有一种机制、把所有的对象联系起来，实现类似的“继承”机制。不同于大部分面向对象语言，ES6 之前并没有引入类(class )的概念， JS 并非通过类而是通过构造函数来创建实例，使用prototype 原型模型来实现“继承"
2.构造函数
在JavaScrip智里，构造函数通常是用来实现实例的，Javascript 没有类的概念，但是有特殊的构造函数。构造函数本质上是个普通函数，充当卖的角色，主要用来创建实例，并初始化实例，即为实例成员变量赋初始值。
构造函数和普通函数的区别在于，构造函数应该遵循以下几点规范：
1.在命名上，构造函数首字母需要大写;
2.调用方式不同，普通函数是直接调用，而构造函数需要使用 new 关键字来进行调用:
3.在构造函数内部， this 指向的是新创建的实例;
4.构造函数中没有显示的 return 表达式，一般情况下，会隐式地返回 this ，也就是新创建的对象，如果想要使用显式的返回值，则显式的返回值必须是对象，否则依然返回实例。

# 9.type的使用

可以定义基本类型,联合类型,元组类型
特点 :
赋值
不能重复声明相同的类型别名
可以定义基础数据类型和对象

1 基本类型

```
type StringType = string
```

2 联合类型

```
type paramtype = number I string
```

3 元组类型

```
type arrType = [string, string, number]
```

4 定义函数类型--类型别名

```
type AddFunc = [name: string, age: number]
```

# 10.type和interface的区别

1.定义的不同
interface: 接口，TS 设计出来主要用于定义[对象类型]，可以对[对象]的形状进行描述
type : 类型别名，为类型创建一个新名称。它并不是一个类型，只是一个别名。
类型别名可以起到类似接口的作用。但是，有一些细微的差别。主要区别在于 type 一旦定义就不能再添加新的属性，而 interface 总是可扩展的。
2.使用区别
1.interface: 接口可以重复声明，TS会将它们合并

```
interface Add {
name: string
}
interface Add{
color: string
}
// 类型“{}”缺少类型“Add”中的以下属性: name，color
let addFun: Add = {}
```

2.type的使用
可以定义基本类型,联合类型,元组类型
2.2 联合类型

```
type paramtype = number i string
```

2.3 元组类型

```
type arrType = [string, string, number]
```

2.4 定义函数类型--类型别名

```
type AddFunc = {name: string, age: number]
```

3.总结
1、如果需要被 extends 或者 implements,则尽量使用接口
2、如果需要使用联合类型(|)或者元组类型，类型别名会更合适
3、如果是定义对象或函数，则都可以。
4、如果实在不想选择的话，就能用interface实现，用interface，如果不能就用type。
4.相同点
1.都可以描述一个对象或者函数

#  11.ts中的类

因为TypeScript中类的概念是遵循ES6标准的同时，添加了新语法的，所以学习完本小节后，你应该记住ES6标准和TypeScript中类的区别，避免在纯JavaScript中使用了TypeScript的语法。我们学习了三个类的修饰符:

public: 公有属性方法修饰符，这是默认修饰符;
private: 私有修饰符，它修饰的属性在类的定义外面无法访问;
protected: 和private相似，区别在于他修饰的成员在继承该类的子类中可以访问。
readonly: 只读修饰符
abstract: 关键字修饰类定义,抽象类一般用来被其他类继承,而不是直接用它创建实例

类既是值，也是类型，当我们使用类创建一个实例的时候，这个实例的类型也就是这个创建这个实例的类。

TS中的类和ES6中的类的相同点和不同点
1.都是采用extends语法进行继承
2.在constructor中都需要首先使用super(xxx)调用父类构造函数，然后才能给this进行赋值
3.supper作为方法时指向父类构造函数，而作为对象且在普通方法中时指向父类的原型，在静态方法中时指向父类。
  不同点:
     1.TypeScript提供抽象类，抽象方法，和接口继承，具体使用请参考TypeScript官方文档。
4.TypeScript可以对类中属性或方法使用访问限定符，
总结: 就是对封装和修饰符有了一定的区别,继承之类的和is是相同的